-
Bug
-
Resolution: Done
-
P1: Critical
-
5.4.0
-
None
-
windows, latest qt5-dev
-
5cb581b3b4c3305a0dfebead1ec7049ab6f2ebc4
tst_qquicktext::fontSizeMode() and multilengthStrings() started failing consistently on Windows ever since the following change was merged to qtbase#dev:
Set fallback for QFont::System to be MS Sans Serif and not Arial
https://codereview.qt-project.org/#/c/87950/
=> qtdeclarative#dev is blocked.
FAIL! : tst_qquicktext::fontSizeMode(styled) 'horizontalFitWidth <= myText->width() + 2' returned FALSE. ()
.\tst_qquicktext.cpp(2946) : failure location
FAIL! : tst_qquicktext::multilengthStrings(Wrap) Compared doubles are not the same (fuzzy compare)
Actual (myText->contentWidth()): 56
Expected (mediumWidth) : 57
.\tst_qquicktext.cpp(3450) : failure location
For Gerrit Dashboard: QTBUG-39961 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
88688,2 | Make tst_qquicktext pass on Windows | dev | qt/qtdeclarative | Status: ABANDONED | -2 | 0 |
88801,3 | Mark failing testcases with QEXPECT_FAIL for windows | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
90264,2 | Windows: Default to MS Shell Dlg 2 | dev | qt/qtbase | Status: MERGED | +2 | 0 |
90265,2 | Remove XFAILs from tst_QQuickText | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
90642,3 | Windows: Use common code paths for default font families. | dev | qt/qtbase | Status: MERGED | +2 | 0 |